--- a/index.html
+++ b/index.html
@@ -304,10 +304,57 @@
             </div>
     </section>
 
+
+    <!-- ------HealNet Story------- -->
+    <section class="w-full flex justify-center mt-[10px]" id="about">
+        <div class="max-w-5xl w-full px-4 md:px-8 mt-10">
+
+            <div class="bg-white border py-10 border-cyan-300 rounded-3xl shadow-lg 
+                transform transition duration-500
+                hover:scale-105
+                p-4 sm:p-5">
+
+                <h2 class="mt-3 mb-3 text-center text-3xl font-semibold bg-gradient-to-r from-cyan-200 via-blue-500 to-blue-800 
+                     bg-clip-text text-transparent">
+                    HealNet’s Story
+                    <span class="text-3xl text-black"></span>: Get to know us
+                </h2>
+
+                <div class="p-2 sm:p-4 flex flex-col md:flex-row items-center md:items-start gap-3">
+
+                    <div class="w-full md:w-1/2 flex justify-center">
+                        <img src="./assets/Rectangle 7.png" class="rounded-xl w-[400px] h-[190px] sm:h-[250px] md:h-[300px]
+                      max-w-[280px] md:max-w-none object-cover shadow-md" />
+                    </div>
+
+
+                    <div class="w-full md:w-1/2 text-center md:text-left">
+                        <p class="text-gray-700 leading-6 text-xs sm:text-sm md:text-base mb-4">
+                            HealNet is more than just an online medical service; it’s a movement towards accessible,
+                            efficient, and compassionate healthcare for all. Founded by a team of visionary doctors,
+                            healthcare professionals, and technology experts, we are driven by the mission to deliver
+                            exceptional medical care directly to you, no matter where you are. Our platform is built on
+                            the pillars of trust, innovation, and patient-centricity, ensuring that every interaction is
+                            personalized and every treatment plan is tailored to your unique.
+                        </p>
+
+                        <button class="bg-blue-500 text-white px-4 py-2 sm:px-5 sm:py-2.5 rounded-lg
+                         text-xs sm:text-sm md:text-base
+                         hover:bg-blue-400 transition-all duration-300 shadow">
+                            Learn more about us
+                        </button>
+                    </div>
+
+                </div>
+            </div>
+        </div>
+    </section>
+
+
     <!-- ------Medicien Section -->
-    <section class="text-gray-600 body-font w-full bg-green-200">
-        <div class="container max-w-7xl px-5 py- mx-auto bg-pink-200">
-            <div class="flex flex-col justify-center text-center w-full mb-12">
+    <section class="text-gray-600 body-font w-full ">
+        <div class="container max-w-7xl px-5 py-10 mx-auto mt-20">
+            <div class="flex  flex-col justify-center text-center w-full mb-12">
                 <h1
                     class="sm:text-3xl text-2xl font-semibold title-font bg-gradient-to-r from-cyan-400 via-blue-400 to-blue-800  bg-clip-text text-transparent">
                     Masters of Medicine :</h1>
@@ -317,21 +364,24 @@
                     ensure that your health is in the best hands:</p>
             </div>
 
-            <div class="container w-full flex justify-center mx-auto bg-yellow-100">
-                <div class="w-full flex flex-col py-2 text-center bg-orange-400">
+            <div class="container w-full flex justify-center mx-auto">
+                <div class="w-full flex flex-col py-2 text-cente  relative">
+                    <img class="absolute w-30 top-0 left-50 z-[-1]" src="./assets/doc-background.png" alt="">
                     <div class="w-full lg:w-[700px] h-100 lg:h-80 mb-10 p- px-0 mx-auto bg-[#35BDFF] rounded-3xl ">
                         <div class="h-auto flex">
-                            <img alt="" class="mt-[-35px] h-89 w-80" src="./assets/Doctor-female.png">
+                            <img alt="" class="mt-[-35px] ml-[-2px] h-89 w-90" src="./assets/Doctor-female.png">
                             <div class="mt-10 text-left">
                                 <h1 class="text-2xl text-white">Dr. Sarah Johnson (Cardiologis)</h1>
                                 <p class="text-white mt-5">Heart health is Dr. Wong’s passion, and her approach to
                                     cardiology integrates cutting-edge technology with compassionate care. She’s a
                                     respected voice in the prevention of heart disease and a trusted partner to her
                                     patients on their journey to wellness.</p>
-                                <div class="mt-10 relative ">
-                                    <button class="text-blue-400 rounded-lg bg-white py-2 px-10">Book Appoinment</button>
+                                <div class="mt-5 relative ">
+                                    <button class="text-blue-400 rounded-lg bg-white py-2 px-10">Book
+                                        Appoinment</button>
                                     <img class="absolute top-4 left-45" src="./assets/phone.png" alt="">
                                 </div>
+                                <img class="absolute w-30 top-168 right-50 z-[-1]" src="./assets/doc-background.png" alt="">
 
                             </div>
 
@@ -339,13 +389,17 @@
 
                     </div>
                     <div class="w-full lg:w-[700px] h-100 lg:h-80 mb-10 p- px-0 mx-auto bg-[#35BDFF] rounded-3xl ">
-                          <div class="h-auto flex">
-                            <img alt="" class="mt-[-35px] h-89 w-80" src="./assets/Doctor-female.png">
+                        <div class="h-auto flex">
+                            <img alt="" class="mt-[-35px] ml-[-12px] h-89 w-80" src="./assets/Doctor-meal.png">
                             <div class="mt-10 text-left">
                                 <h1 class="text-2xl text-white">Dr. Mark Lee (Dermatologist )</h1>
-                                <p class="text-white mt-5">Dr. Lee is a visionary in dermatology, advancing treatments for skin health with a gentle, holistic approach. His dedication to clinical excellence and patient education has made him a leader in dermatological care. He’s known for his precision and commitment to patient-centered care.</p>
-                                <div class="mt-10 relative ">
-                                    <button class="text-blue-400 rounded-lg bg-white py-2 px-10">Book Appoinment</button>
+                                <p class="text-white mt-5">Dr. Lee is a visionary in dermatology, advancing treatments
+                                    for skin health with a gentle, holistic approach. His dedication to clinical
+                                    excellence and patient education has made him a leader in dermatological care. He’s
+                                    known for his precision and commitment to patient-centered care.</p>
+                                <div class="mt-5 relative ">
+                                    <button class="text-blue-400 rounded-lg bg-white py-2 px-10">Book
+                                        Appoinment</button>
                                     <img class="absolute top-4 left-45" src="./assets/phone.png" alt="">
                                 </div>
 
