--- a/index.html
+++ b/index.html
@@ -5,14 +5,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>HealNet</title>
+
     <!-- favb icon -->
-    <link rel="shortcut icon" href="./assets/Group 2.png" type="image/x-icon">
+    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css">
+
     <!-- Tailwind -->
     <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
     <!-- font owesome -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css">
     <!-- Style Sheet -->
     <link rel="stylesheet" href="style.css">
+
+      <link rel="shortcut icon" href="./assets/Group 2.png" type="image/x-icon">
+    <!-- AOS animation -->
+
+
 </head>
 
 <body>
@@ -62,7 +69,7 @@
             </div>
 
             <div
-                class="w-full max-w-160 py-10 px-8  xl:max-w-170 lg:max-w-150 flex-col md:items-start md:text-left mb-16 md:mb-0 items-center text-left sm:bg-pink-00">
+                class='w-full max-w-160 py-10 px-8  xl:max-w-170 lg:max-w-150 flex-col md:items-start md:text-left mb-16 md:mb-0 items-center text-left sm:bg-pink-00' data-aos="fade-right">
                 <h1
                     class="text-3xl font-semibold ml-5 xl:text-6xl xl:leading-18 lg:text-6xl md:text-4xl md:leading-12 lg:leading-15 ml-[-5px]">
                     Your <span class="text-blue-500 font-semibold">trusted </span> <span
@@ -108,7 +115,7 @@
             </div>
 
             <!-- Doctor Image -->
-            <div id="img-container" class="w-full py-3 flex jflex-col md:items-start h-auto md:mb-0">
+            <div id="img-container" class="w-full py-3 flex jflex-col md:items-start h-auto md:mb-0"data-aos="fade-left">
                 <div class="w-full" id="image-container">
                     <img class="object-cover object-center ml-10 mt-[-10px] xl:ml-20 lg:mr-15 sm:ml-10 md:ml-0"
                         alt="hero" src="./assets/Group 1 (2).png" id="doctr-img">
@@ -139,7 +146,7 @@
     <section class="w-full body-font bg-[#F4BFF]">
         <div class="xl:max-w-6xl lg:max-w-4xl sm:max-w-[680px] sm:py-12  mx-auto border-1 border-cyan-500 rounded-3xl bg-white py-6 px-10 m-5 shadow-lg shadow-gray-400
 
-             hover:transition hover:duration-500 ease-in-out xl:hover:scale-105 cursor-pointer">
+             hover:transition hover:duration-500 ease-in-out xl:hover:scale-105 cursor-pointer" data-aos="zoom-out">
 
             <div class=" mb-6">
                 <h1 class="text-blue-500 title-font sm:text-3xl text-2xl font-medium ">
@@ -209,7 +216,7 @@
                 </p>
             </div>
 
-            <div class="max-w-7xl px-5 py-10 mx-auto mt-10 flex flex-wrap">
+            <div class="max-w-7xl px-5 py-10 mx-auto mt-10 flex flex-wrap" data-aos="zoom-in">
                 <div class="flex flex-wrap -m-4 relative">
                     <!-- bg-image -->
                     <img class="w-30 h-10 absolute top-0 left-[-30px]" src="./assets/Group (1).png" alt="">
@@ -254,7 +261,7 @@
             </div>
 
             <!-- ------Top Service row 2--------- -->
-            <div class="container px-5 py-10 mx-auto  relative">
+            <div class="container px-5 py-10 mx-auto  relative" data-aos="zoom-in-up">
                 <div class="flex flex-wrap -m-4">
                     <!-- left -->
                     <div class="p-4 xl:w-1/3 md:w-1/1">
@@ -350,11 +357,144 @@
         </div>
     </section>
 
+    <!-- ------------Testimonails-------- -->
+    <section class="w-full body-font">
+        <div class="max-w-7xl mx-auto">
+            <div class="w-full  px-5 py-10  mt-10 " >
+                <h1 class="sm:text-3xl text-4xl font-medium title-font text-center bg-gradient-to-r from-cyan-200 via-blue-500 to-blue-800 
+                     bg-clip-text text-transparent">Patient
+                    Testimonials:</h1>
+                <h1 class="sm:text-3xl text-4xl font-medium title-font text-center text-gray-900 mb-2">Hear from Those
+                    We’ve Cared For
+                </h1>
+                <p class="text-sm text-center text-gray-500">Discover the difference we make through the voices of those
+                    we’ve served:</p>
+            </div>
+            <div class=" px-5 py-10 mx-auto flex flex-wrap relative" data-aos="zoom-out-down">
+                <img class="w-20 absolute top-[-10px] left-[-20px] z-[-10]" src="./assets/testimonal-ack.png" alt="">
+                <div class="flex flex-wrap justify-center gap-10 -m-4 z-50">
+                    <div
+                        class=" lg:w-[45%] md:w-full bg-[#ecf8ff] transition duration-500 hover:scale-105 cursor-pointer">
+                        <div
+                            class="flex border-2 rounded-lg border-cyan-200 border shadow-lg shadow-gray-300-opacity-50 p-8 sm:flex-row flex-col ">
+                            <div
+                                class="sm:mr-8 sm:mb-0 mb-4 mt-[-25px] inline-flex items-center justify-center flex-shrink-0">
+                                <img src="./assets/testimonai;l.png" alt="" class="w-20 h-20">
+                            </div>
+                            <div class="flex-grow">
+                                <p class="leading-relaxed text-base">“After my knee surgery, the convenience of online
+                                    consultations made my recovery smoother than I could have imagined.”</p>
+                                <a class="mt-3 text-indigo-500 inline-flex items-center">- Linda.
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                    <div
+                        class="lg:w-[45%]  md:w-full bg-[#ecf8ff] transition duration-500 hover:scale-105 cursor-pointer">
+                        <div
+                            class="flex border-2 rounded-lg border-cyan-200 shadow-lg shadow-gray-300 border-opacity-50 p-8 sm:flex-row flex-col">
+                            <div
+                                class="sm:mr-8 sm:mb-0 mb-4 mt-[-20px] inline-flex items-center justify-center flex-shrink-0">
+                                <img src="./assets/Rectangle 8.png" alt="" class="w-20 h-20">
+                            </div>
+                            <div class="flex-grow">
+
+                                <p class="leading-relaxed text-base">“Managing chronic conditions like diabetes requires
+                                    a lot of vigilance, but the medicine refill system has simplified my life.”</p>
+                                <a class="mt-3 text-indigo-500 inline-flex items-center">- Henry B.
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Testimonal counts -->
+            <div class="container p-5 mx-auto ">
+                <div class="flex flex-col">
+                    <div class="flex flex-wrap justify-center gap-2 sm:-m-4 -mx-4 -mb-10 -mt-4">
+                        <!-- first -->
+                        <div class="p-4 lg:w-70 h-40 text-center md:w-1/3 sm:mb-0">
+                            <div>
+                                <h1 class="text-5xl font-bold bg-gradient-to-r from-cyan-200 via-blue-500 to-blue-800 
+                                    bg-clip-text text-transparent">10,000+</h1>
+                            </div>
+                            <p class="text-base leading-relaxed mt-2">Successful Consultations.</p>
+                        </div>
+                        <!-- second -->
+                        <div class="p-4 lg:w-70 h-40 text-center md:w-1/3 sm:mb-0">
+                            <div>
+                                <h1 class="text-5xl font-bold bg-gradient-to-r from-cyan-200 via-blue-500 to-blue-800 
+                                    bg-clip-text text-transparent">2,500+</h1>
+                            </div>
+                            <p class="text-base leading-relaxed mt-2">Healthcare Professionals.</p>
+                        </div>
+                        <!-- third -->
+                        <div class="p-4 lg:w-70 h-40 text-center md:w-1/3 sm:mb-0">
+                            <div>
+                                <h1 class="text-5xl font-bold bg-gradient-to-r from-cyan-200 via-blue-500 to-blue-800 
+                                    bg-clip-text text-transparent">98%</h1>
+                            </div>
+                            <p class="text-base leading-relaxed mt-2">Patient Satisfaction Rate.</p>
+                        </div>
+                        <!-- fourth-->
+                        <div class="p-4 lg:w-70 h-40 text-center md:w-1/3 sm:mb-0">
+                            <div>
+                                <h1 class="text-5xl font-bold bg-gradient-to-r from-cyan-200 via-blue-500 to-blue-800 
+                                    bg-clip-text text-transparent">200+</h1>
+                            </div>
+                            <p class="text-base leading-relaxed mt-2">Top Specialists.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class=" px-5 py-10 mx-auto flex flex-wrap relative" data-aos="zoom-out-up">
+                    <div class="flex flex-wrap justify-center gap-10 -m-4">
+                        <div
+                            class=" lg:w-[45%] bg-[#ecf8ff] md:w-full transition duration-500 hover:scale-105 cursor-pointer">
+                            <div
+                                class="flex border-2 rounded-lg border-cyan-200 shadow-lg shadow-gray-300 border-opacity-50 p-8 sm:flex-row flex-col">
+                                <div
+                                    class="sm:mr-8 sm:mb-0 mb-4 mt-[-25px] inline-flex items-center justify-center flex-shrink-0">
+                                    <img src="./assets/Rectangle 8 245.png" alt="" class="w-20 h-20">
+                                </div>
+                                <div class="flex-grow">
+                                    <p class="leading-relaxed text-base">“After my knee surgery, the convenience of
+                                        online
+                                        consultations made my recovery smoother than I could have imagined.”</p>
+                                    <a class="mt-3 text-indigo-500 inline-flex items-center">- Linda.
+                                    </a>
+                                </div>
+                            </div>
+                        </div>
+                        <div
+                            class="lg:w-[45%] bg-[#ecf8ff] md:w-full z-99 transition duration-500 hover:scale-105 cursor-pointer">
+                            <div
+                                class="flex border-2 rounded-lg border-cyan-200 shadow-lg shadow-gray-300 border-opacity-50 p-8 sm:flex-row flex-col">
+                                <div
+                                    class="sm:mr-8 sm:mb-0 mb-4 mt-[-20px] inline-flex items-center justify-center flex-shrink-0">
+                                    <img src="./assets/Rectangle 8 (4).png" alt="" class="w-20 h-20">
+                                </div>
+                                <div class="flex-grow">
+
+                                    <p class="leading-relaxed text-base">“Managing chronic conditions like diabetes
+                                        requires
+                                        a lot of vigilance, but the medicine refill system has simplified my life.”</p>
+                                    <a class="mt-3 text-indigo-500 inline-flex items-center">- Henry B.
+                                    </a>
+                                </div>
+                            </div>
+                            <img class="w-20 absolute top-45 right-0 z-[-20]" src="./assets/testimonal-ack.png" alt="">
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+    </section>
 
     <!-- ------Medicien Section -->
     <section class="text-gray-600 body-font w-full ">
         <div class="container max-w-7xl px-5 py-10 mx-auto mt-20">
-            <div class="flex  flex-col justify-center text-center w-full mb-12">
+            <div class="flex  flex-col justify-center text-center w-full mb-12" >
                 <h1
                     class="sm:text-3xl text-2xl font-semibold title-font bg-gradient-to-r from-cyan-400 via-blue-400 to-blue-800  bg-clip-text text-transparent">
                     Masters of Medicine :</h1>
@@ -365,7 +505,7 @@
             </div>
 
             <div class="container w-full flex justify-center mx-auto">
-                <div class="w-full flex flex-col py-2 text-cente  relative">
+                <div class="w-full flex flex-col py-2 text-cente  relative" >
                     <img class="absolute w-30 top-0 left-50 z-[-1]" src="./assets/doc-background.png" alt="">
                     <div class="w-full lg:w-[700px] h-100 lg:h-80 mb-10 p- px-0 mx-auto bg-[#35BDFF] rounded-3xl ">
                         <div class="h-auto flex">
@@ -381,7 +521,8 @@
                                         Appoinment</button>
                                     <img class="absolute top-4 left-45" src="./assets/phone.png" alt="">
                                 </div>
-                                <img class="absolute w-30 top-168 right-50 z-[-1]" src="./assets/doc-background.png" alt="">
+                                <img class="absolute w-30 top-168 right-50 z-[-1]" src="./assets/doc-background.png"
+                                    alt="">
 
                             </div>
 
@@ -417,7 +558,7 @@
 
     <!-- ----------Contact Us----- -->
     <section class="text-gray-600 body-font">
-        <div class="container max-w-7xl px-5 py-24 mx-auto">
+        <div class="container max-w-7xl px-5 py-24 mx-auto" >
             <div class="flex flex-col text-center w-full mb-12">
                 <h1 class="sm:text-3xl text-2xl font-semibold title-font mb-4 text-gray-900"> Reach our <span class=" bg-gradient-to-r from-blue-400 via-blue-500 to-blue-700 
                      bg-clip-text text-transparent">Help Desk</span> for support</h1>
@@ -549,6 +690,14 @@
     </footer>
 
     <script src="script.js"></script>
+
+    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+    <script>
+        AOS.init({
+            offset: 400,
+            duration: 1000,
+        });
+    </script>
 </body>
 
 </html>
