--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 
     <!-- ============== Hero  Section =================== -->
     <section class="w-full body-font bg-[#EAFEFF]">
-        <div class="w-full max-w-350 mx-auto flex py-10 md:flex-row flex-col items-center relative">
+        <div class="w-full max-w-350 mx-auto flex py-10 md:flex-row flex-col items-center relative" data-aos="zoom-in">
             <div class="absolute top-80 left-5 z-1">
                 <img src="./assets/Vector 1 (3).png" alt="" width="1500px">
             </div>
@@ -143,9 +143,7 @@
 
     <!-- Book Appointment -->
     <section class="w-full body-font bg-[#F4BFF]">
-        <div class="mx-auto xl:max-w-6xl lg:max-w-4xl sm:max-w-[600px] border-1 border-cyan-500 rounded-3xl bg-white py-6 px-10 m-5 shadow-lg shadow-gray-400
-
-             hover:transition hover:duration-500 ease-in-out xl:hover:scale-105 cursor-pointer" data-aos="zoom-out">
+        <div class="mx-auto xl:max-w-6xl lg:max-w-4xl sm:max-w-[600px] border-1 border-cyan-500 rounded-3xl bg-white py-6 px-10 m-5 shadow-lg shadow-gray-400 cursor-pointer transition duration-400 hover:scale-102" >
 
             <div class=" mb-6">
                 <h1 class="text-blue-500 title-font sm:text-3xl text-2xl font-medium ">
@@ -154,7 +152,7 @@
             </div>
 
 
-            <div class="flex flex-col items-center md:flex-row gap-5 md:gap-6 items-center">
+            <div class="flex flex-col items-center md:flex-row gap-5 md:gap-6 items-center ">
 
 
                 <div class="flex-1 w-full">
