--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
             </nav>
 
             <button id="join-btn"
-                class="w-25 text-white bg-linear-to-r from-cyan-300 to-blue-600 border-0 py-2 px-6 focus:outline-none rounded-md font-medium  shadow-lg shadow-gray-500/50 cursor-pointer transition duration-400 hover:-translate-y-2 text-base mt-4 md:mt-0 hidden md:block md:text-sm md:px-4 text-xl">
+                class="w-30 h-12 text-white bg-linear-to-r from-cyan-300 to-blue-600 border-0 py-0 px-6 focus:outline-none rounded-md font-medium  shadow-lg shadow-gray-500/50 cursor-pointer transition duration-400 hover:-translate-y-2 text-base mt-4 md:mt-0 hidden md:block md:text-sm md:px-4 text-xl">
                 Join Us
             </button>
         </div>
@@ -143,7 +143,7 @@
 
     <!-- Book Appointment -->
     <section class="w-full body-font bg-[#F4BFF]">
-        <div class="mx-auto xl:max-w-6xl lg:max-w-4xl sm:max-w-[600px] border-1 border-cyan-500 rounded-3xl bg-white py-6 px-10 m-5 shadow-lg shadow-gray-400 cursor-pointer transition duration-400 hover:scale-102" >
+        <div class="mx-auto mt-20 xl:max-w-6xl lg:max-w-4xl sm:max-w-[600px] border-1 border-cyan-500 rounded-3xl bg-white py-6 px-10 m-5 shadow-lg shadow-gray-400 cursor-pointer transition duration-400 hover:scale-102" >
 
             <div class=" mb-6">
                 <h1 class="text-blue-500 title-font sm:text-3xl text-2xl font-medium ">
@@ -176,7 +176,7 @@
 
                 <div class="flex-1 w-full">
                     <div class="flex gap-2 items-center mb-2">
-                        <img src="./assets/Vector (1).png" alt="calendar icon" class="w-5 h-5">
+                        <img src="./assets/appointment.png" alt="calendar icon" class="w-6 h-6">
                         <h6 class="font-semibold text-gray-700">Date of Appointment</h6>
                     </div>
                     <input type="date"
@@ -187,8 +187,7 @@
                 <div class="flex-shrink w-full md:w-auto">
                     <div
                         class="flex justify-center items-center gap-2 py-2 px-4 w-full md:w-[150px] h-[50px] mt-7 bg-[#00a4F4] hover:to-blue-600 text-white font-semibold rounded-lg shadow-lg transition">
-                        <button "
-                        type=" submit">
+                        <button type="submit">
                             Book Now
                         </button>
                         <img src="./assets/tick.png" alt="" class="w-5 h-5">
@@ -365,19 +364,19 @@
                 more guidance:</p>
                 <div class="max-w-5xl mx-auto px-5 py-15 mx-auto flex flex-wrap">
                     <div class="flex flex-col flex-wrap lg:py-6 lg:w-1/2 lg:pl-12 lg:text-left text-center">
-                        <div class="flex gap-5 mb-10 lg:items-start items-center mr-12">
-                            <div class="inline-flex items-center justify-center mb-5">
+                        <div class="flex gap-5 p-2 justify-center items-center mb-10 lg:items-start mr-12">
+                            <div class="inline-flex items-center justify-center mb-10">
                                 <img src="./assets/Frame 22.png"
-                                    class=" object-cover w-35 rounded-full transition duration-300 hover:scale-105 hover:shadow-lg hover:shadow-gray-500/70 cursor-pointer" />
+                                    class=" object-cover w-30 rounded-full transition duration-300 hover:scale-105 hover:shadow-lg hover:shadow-gray-500/70 cursor-pointer" />
                             </div>
                             <div class="flex-grow ">
                                 <h2 class="text-gray-900 text-2xl title-font font-medium mb-2">Create Your Profile</h2>
-                                <p class="text-gray-700 text-sm text-base">Sign up and fill in your medical history
+                                <p class="text-gray-700 text-sm leading-relaxed text-base">Sign up and fill in your medical history
                                     securely. Setting up your profile this way would ensure that you stay up-to-date
                                     with your medical processes.</p>
                             </div>
                         </div>
-                        <div class="flex gap-5 mb-10 lg:items-start items-center mr-12 ">
+                        <div class="flex  gap-5  p-2 justify-center items-center mb-10 lg:items-start items-center mr-12 ">
                             <div class="inline-flex items-center justify-center mb-2 ">
                                 <img src="./assets/Frame 23.png"
                                     class=" object-cover w-30  transition duration-300 hover:scale-105 hover:shadow-lg hover:shadow-gray-500/70 cursor-pointer rounded-full" />
@@ -390,7 +389,7 @@
 
                             </div>
                         </div>
-                        <div class="flex gap-5 mb-10 lg:items-start items-center mr-12">
+                        <div class="flex gap-5  p-2 justify-center items-center mb-10 lg:items-start items-center mr-12">
                             <div class="inline-flex items-center justify-center  mb-2">
                                 <img src="./assets/Frame 24.png"
                                     class=" object-cover w-30  transition duration-300 hover:scale-105 hover:shadow-lg hover:shadow-gray-500/70 cursor-pointer rounded-full" />
@@ -404,8 +403,8 @@
                         </div>
                     </div>
 
-                    <div class="lg:w-1/2 w-full mb-10 lg:mb-0 rounded-lg overflow-hidden relative">
-                        <img alt="feature" class="object-cover object-center w-96 " src="./assets/Frame 18 (1).png">
+                    <div class="lg:w-1/2 w-full mb-10 lg:mb-0 rounded-lg overflow-hidden relative transition duration-500 hover:scale-105">
+                        <img alt="feature" class="object-cover object-center w-100 ml-15 mt-5 " src="./assets/Frame 18 (1).png">
                         <img alt="feature" class="object-cover object-center absolute top-25 left-73"
                             src="./assets/Group 27.png">
                     </div>
@@ -431,9 +430,9 @@
                 <img class="w-20 absolute top-[-10px] left-[-20px] z-[-10]" src="./assets/testimonal-ack.png" alt="">
                 <div class="flex flex-wrap justify-center gap-10 -m-4 z-50">
                     <div
-                        class=" lg:w-[45%] md:w-full bg-[#ecf8ff] transition duration-500 hover:scale-105 cursor-pointer">
+                        class=" lg:w-[45%] md:w-full bg-gradient-to-r from-white from-[30%] to-cyan-100/50 to-[95%] transition duration-500 hover:scale-105 cursor-pointer">
                         <div
-                            class="flex border-2 rounded-lg border-cyan-200 border shadow-lg shadow-gray-300-opacity-50 p-8 sm:flex-row flex-col ">
+                            class="flex border-1 rounded-lg border-cyan-300 border shadow-lg shadow-gray-300-opacity-50 p-8 sm:flex-row flex-col ">
                             <div
                                 class="sm:mr-8 sm:mb-0 mb-4 mt-[-25px] inline-flex items-center justify-center flex-shrink-0">
                                 <img src="./assets/testimonai;l.png" alt="" class="w-20 h-20">
@@ -447,9 +446,9 @@
                         </div>
                     </div>
                     <div
-                        class="lg:w-[45%]  md:w-full bg-[#ecf8ff] transition duration-500 hover:scale-105 cursor-pointer">
+                        class="lg:w-[45%]  md:w-full bg-gradient-to-r from-white from-[30%] to-cyan-100/50 to transition duration-500 hover:scale-105 cursor-pointer">
                         <div
-                            class="flex border-2 rounded-lg border-cyan-200 shadow-lg shadow-gray-300 border-opacity-50 p-8 sm:flex-row flex-col">
+                            class="flex border-1 rounded-lg border-cyan-300 shadow-lg shadow-gray-300 border-opacity-50 p-8 sm:flex-row flex-col">
                             <div
                                 class="sm:mr-8 sm:mb-0 mb-4 mt-[-20px] inline-flex items-center justify-center flex-shrink-0">
                                 <img src="./assets/Rectangle 8.png" alt="" class="w-20 h-20">
@@ -507,9 +506,9 @@
                 <div class=" px-5 py-10 mx-auto flex flex-wrap relative" data-aos="zoom-out-up">
                     <div class="flex flex-wrap justify-center gap-10 -m-4">
                         <div
-                            class=" lg:w-[45%] bg-[#ecf8ff] md:w-full transition duration-500 hover:scale-105 cursor-pointer">
+                            class=" lg:w-[45%] bg-gradient-to-r from-white from-[30%] to-cyan-100/50 to md:w-full transition duration-500 hover:scale-105 cursor-pointer">
                             <div
-                                class="flex border-2 rounded-lg border-cyan-200 shadow-lg shadow-gray-300 border-opacity-50 p-8 sm:flex-row flex-col">
+                                class="flex border-1 rounded-lg border-cyan-300 shadow-lg shadow-gray-300 border-opacity-50 p-8 sm:flex-row flex-col">
                                 <div
                                     class="sm:mr-8 sm:mb-0 mb-4 mt-[-25px] inline-flex items-center justify-center flex-shrink-0">
                                     <img src="./assets/Rectangle 8 245.png" alt="" class="w-20 h-20">
@@ -524,9 +523,9 @@
                             </div>
                         </div>
                         <div
-                            class="lg:w-[45%] bg-[#ecf8ff] md:w-full z-99 transition duration-500 hover:scale-105 cursor-pointer">
+                            class="lg:w-[45%] bg-gradient-to-r from-white from-[30%] to-cyan-100/50 to md:w-full z-99 transition duration-500 hover:scale-105 cursor-pointer">
                             <div
-                                class="flex border-2 rounded-lg border-cyan-200 shadow-lg shadow-gray-300 border-opacity-50 p-8 sm:flex-row flex-col">
+                                class="flex border-1 rounded-lg border-cyan-300 shadow-lg shadow-gray-300 border-opacity-50 p-8 sm:flex-row flex-col">
                                 <div
                                     class="sm:mr-8 sm:mb-0 mb-4 mt-[-20px] inline-flex items-center justify-center flex-shrink-0">
                                     <img src="./assets/Rectangle 8 (4).png" alt="" class="w-20 h-20">
@@ -565,10 +564,10 @@
             <div class="container w-full flex justify-center mx-auto">
                 <div class="w-full flex flex-col py-2 text-cente  relative">
                     <img class="absolute w-30 top-0 left-35 z-[-1]" src="./assets/doc-background.png" alt="">
-                    <div class="w-full flex h-auto py-6 lg:w-[800px] sm:[600px] h-100 lg:h-80 mb-10 p- px-0 mx-auto bg-[#35BDFF] rounded-3xl ">
+                    <div class="w-full flex h-auto py-6 lg:w-[800px] sm:[600px] lg:h-80 mb-10 p- px-0 mx-auto bg-[#35BDFF] rounded-3xl ">
                         <div class="h-auto flex ">
-                            <img alt="" class="mt-[35px] ml-[-1px] 2xl:mt-[-50px] 2xl:ml-0 sm:mt-2 sm:ml-2 h-87 w-90 mt-20 " src="./assets/Doctor-female.png">
-                            <div class="mt-10 text-left mx-5">
+                            <img alt="" class="mt-[35px] ml-[-2px] 2xl:mt-[-50px] 2xl:ml-0 sm:mt-2 sm:ml-2 h-87 w-90 mt-20 " src="./assets/Doctor-female.png">
+                            <div class="mt-8 text-left mx-5">
                                 <h1 class="text-2xl text-white">Dr. Sarah Johnson (Cardiologis)</h1>
                                 <p class="text-white mt-5">Heart health is Dr. Wong’s passion, and her approach to
                                     cardiology integrates cutting-edge technology with compassionate care. She’s a
@@ -576,7 +575,7 @@
                                     patients on their journey to wellness.</p>
                                 <div class="mt-5 relative transition duration-500 hover:scale-105">
                                     <button
-                                        class="text-blue-500 font-semibold shadow-lg shadow-gray-200/50 rounded-lg bg-white py-2 px-10  cursor-pointer">Book
+                                        class="text-blue-500 font-semibold shadow-lg shadow-gray-300/50 rounded-lg bg-white py-2 px-10  cursor-pointer">Book
                                         Appoinment</button>
                                     <img class="absolute top-4 left-46" src="./assets/phone.png" alt="">
                                 </div>
@@ -585,10 +584,10 @@
 
                     </div>
                     <div
-                        class="w-full flex h-auto py-6 lg:w-[800px] sm:[600px] h-100 lg:h-80 mb-10 p- px-0 mx-auto bg-[#35BDFF] rounded-3xl">
+                        class="w-full flex h-auto mt-10  py-6 lg:w-[800px] sm:[600px] lg:h-80 mb-10 p- px-0 mx-auto bg-[#35BDFF] rounded-3xl">
                         <div class="h-auto flex">
                             <img alt="" class="mt-[30px] ml-[-12px] 2xl:mt-[-50px] 2xl:ml-[-10px] sm:mt-2 sm:ml-2 h-87 w-90 mt-20 " src="./assets/Doctor-meal.png">
-                            <div class="mt-10 text-left mx-5">
+                            <div class="mt-5 text-left mx-5">
                                 <h1 class="text-2xl text-white">Dr. Mark Lee (Dermatologist )</h1>
                                 <p class="text-white mt-5">Dr. Lee is a visionary in dermatology, advancing treatments
                                     for skin health with a gentle, holistic approach. His dedication to clinical
@@ -596,7 +595,7 @@
                                     known for his precision and commitment to patient-centered care.</p>
                                 <div class="mt-5 relative transition duration-500 hover:scale-105">
                                     <button
-                                        class="text-blue-500 rounded-lg font-semibold bg-white py-2 px-10 shadow-lg shadow-gray-200/50 cursor-pointer">Book
+                                        class="text-blue-500 rounded-lg font-semibold bg-white py-2 px-10 shadow-lg shadow-gray-300/50 cursor-pointer">Book
                                         Appoinment</button>
                                     <img class="absolute top-4 left-46" src="./assets/phone.png" alt="">
 
